--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@ h1 {
   margin-left: left;
   margin-right: auto;
 }
+body {
+  background-color: #fefbd8;
+}
 
 
 nav {
@@ -23,9 +26,10 @@ nav {
 
 table, th, td {
   border: 1px solid black;
+  {
+  
 
-}
-
+ 
  
  
 
